# EcoNet-PHX

./: CMakeLists.txt
qpudatashards/particles/: SmartCorridorSynergyPhoenix2026v1.csv
src/corridor/: CorridorAnalyticsService.cpp  CorridorSynergyAmplifier.cpp  CorridorSynergyAmplifier.h
tests/: test_corridor_synergy_amplifier.cpp
